# gmail-claude-runner

./: .gitignore  .python-version  README.md  pyproject.toml
src/: claude_service.py  config.py  gmail_service.py  main.py  notification_handler.py
